# ROSMAP-SingleNucleusRNAseq

./: .gitignore  BACKGROUND.md  GOLDEN_PATH.md  KNOWN_ISSUES.md  README.md  pyproject.toml
Analysis/: README.md
Analysis/ACE/: DOWNSTREAM_MALE_ARMS.md  README.md  _resubmit_downstream_gaps.sh  _resubmit_gsea_wgcna.sh  _resubmit_wgcna_only.sh  ace_correlation_investigation.py  run_all_ace_tsai.sh  run_downstream_male_arms.sh
Analysis/DeJager/: README.md
Analysis/Resilient/: README.md
Analysis/SocIsl/: README.md
Analysis/Tsai/: README.md
Analysis/_template/: HOWTO_START.md  README.md
Analysis/envs/: README.md  compass.yml  deg.yml  scenic.yml
Data/: README.md  manifest.tsv
Data/Phenotypes/: DeJager_ID_Map.csv  README.md  ROSMAP_clinical.csv  TSAI_DEJAGER_all_patients_wACEscores.csv  dataset_652_basic_12-23-2021.csv
Data/Transcriptomics/: README.md  copy_data.sbatch
Data_Access/: README.md
Preprocessing/: README.md
Preprocessing/DeJager/: README.md
Preprocessing/Tsai/: README.md
Preprocessing/envs/: README.md  bcftools.yml  cellbender.yml  globus.yml  synapse.yml
Processing/: README.md
Processing/DeJager/: README.md  secondStageTsaiPipeline.Rscript  thirdStageTsaiPipeline.py
Processing/Tsai/: Norm_FeatSel_DimRed_Cluster.ipynb  README.md  Tsai_Sample_SingleCell_Pipeline.ipynb
config/: README.md  analysis_models.yaml  datasets.yaml  paths.local.sh.template  paths.sh  pipeline.yaml  preflight.sh  variants.yaml
docs/: AUDIT.md  DATA_CONTRACT.md  RUNBOOK.md  VARIANTS.md
envs/: README.md
setup/: README.md  install_envs.sh
(+4916 files in other folders)
