[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosmap-tx"
version = "0.1.0"
description = "Shared configuration, launchers, and validation for ROSMAP transcriptomics pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

